force-app/main/default/objects/FraquezadoContato__c/FraquezadoContato__c.object-meta.xml
<CustomObject>
    <description>Lista de Fraquezas para o contato</description>
    <label>Fraqueza do Contato</label>
    <nameField>
        <displayFormat>Skill-{000000000}</displayFormat>
        <label>Fraquezas do Contatos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fraquezas do Contatos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>