force-app/main/default/objects/FraquezadoContato__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <description>Contato referente a Fraquezas</description>
    <inlineHelpText>Contato referente a Fraquezas</inlineHelpText>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fraquezas do Contatos</relationshipLabel>
    <relationshipName>FraquezasDoContatos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>