force-app/main/default/objects/FraquezadoContato__c/fields/Fraqueza__c.field-meta.xml
<CustomField>
    <fullName>Fraqueza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionamento com Contato</description>
    <inlineHelpText>Relacionamento com Contato</inlineHelpText>
    <label>Fraqueza</label>
    <referenceTo>Fraqueza__c</referenceTo>
    <relationshipLabel>Fraquezas do Contatos</relationshipLabel>
    <relationshipName>FraquezasDoContatos</relationshipName>
    <type>Lookup</type>
</CustomField>