force-app/main/default/objects/FraquezadoContato__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Classificação da Fraqueza do contato</description>
    <inlineHelpText>Classificação da Fraqueza do contato</inlineHelpText>
    <label>Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>