force-app/main/default/objects/FraquezadoContato__c/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <description>mede o level da fraqueza</description>
    <inlineHelpText>mede o level da fraqueza</inlineHelpText>
    <label>Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>